# mailchimp_auto

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  suggestions.txt
docs/: config.rst
docs/source/: conf.py  index.rst
mailchimp_auto/: main.py
mailchimp_auto/scripts/: Config.py  __init__.py  campaign_detail.py  create_campaign.py  directory.py  engine.py  generate_template.py  gspread_data.py  image_processor.py  load_newsletter_template.py  template.py  template_Config.py  template_action.py  unfinished_create_campaign_from_template.py  unfinished_upload_template.py
sample_template/my_weekly_newsletter/: master.htm  style.css
sample_template/my_weekly_newsletter/block/: 01_weekly_quote.htm  02_community_insights.htm  03_trending_news.htm  04_upcoming_dividend.htm  05_estimation.htm  06_footer.htm
tests/: test1.py  test2.py  test_gspread.py  test_mailchimp_auto.py
