[tool.poetry]
name = "mailchimp_auto"
version = "0.1.0"
description = ""
authors = ["tys203831 <tys203831@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mailchimp_auto = "mailchimp_auto.main:app"

[tool.poetry.dependencies]
python = "^3.9.12"
typer = {extras = ["all"], version = "^0.6.1"}
mailchimp-marketing = "^3.0.75"
Jinja2 = "^3.1.2"
pandas = "^1.4.3"
gspread = "^5.4.0"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
